playing with pytorch

--- a/pytorch_play/basics/quickstart.ipynb
+++ b/pytorch_play/basics/quickstart.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "6035e3a8",
+   "id": "c3f7663d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "d7cf2e83",
+   "id": "3e933e0d",
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ca8ecbb7",
+   "id": "303b4fe2",
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "fb8f02ac",
+   "id": "3446dd8e",
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "8bad9af5",
+   "id": "a820553f",
    "metadata": {},
    "outputs": [
     {
@@ -238,8 +238,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "7b1e31ad",
+   "execution_count": 22,
+   "id": "2903d787",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,8 +250,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "ae0efbc5",
+   "execution_count": 23,
+   "id": "363bdeac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,8 +278,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "a2edc795",
+   "execution_count": 24,
+   "id": "4dc3148c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,9 +302,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "0bcf04d3",
-   "metadata": {},
+   "execution_count": 25,
+   "id": "a52c0f88",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -312,153 +314,153 @@
      "text": [
       "Epoch 1\n",
       "-------------------------------\n",
-      "loss: 2.296129  [    0/60000]\n",
-      "loss: 0.568918  [ 6400/60000]\n",
-      "loss: 0.385508  [12800/60000]\n",
-      "loss: 0.516154  [19200/60000]\n",
-      "loss: 0.478129  [25600/60000]\n",
-      "loss: 0.440600  [32000/60000]\n",
-      "loss: 0.381721  [38400/60000]\n",
-      "loss: 0.535000  [44800/60000]\n",
-      "loss: 0.446350  [51200/60000]\n",
-      "loss: 0.525771  [57600/60000]\n",
+      "loss: 0.272898  [    0/60000]\n",
+      "loss: 0.153371  [ 6400/60000]\n",
+      "loss: 0.238665  [12800/60000]\n",
+      "loss: 0.206741  [19200/60000]\n",
+      "loss: 0.234507  [25600/60000]\n",
+      "loss: 0.253039  [32000/60000]\n",
+      "loss: 0.213380  [38400/60000]\n",
+      "loss: 0.255204  [44800/60000]\n",
+      "loss: 0.202445  [51200/60000]\n",
+      "loss: 0.196814  [57600/60000]\n",
       "Test Error: \n",
-      " Accuracy: 84.6%, Avg loss: 0.422414 \n",
+      " Accuracy: 88.2%, Avg loss: 0.373671 \n",
       "\n",
       "Epoch 2\n",
       "-------------------------------\n",
-      "loss: 0.259012  [    0/60000]\n",
-      "loss: 0.355612  [ 6400/60000]\n",
-      "loss: 0.295566  [12800/60000]\n",
-      "loss: 0.391454  [19200/60000]\n",
-      "loss: 0.404466  [25600/60000]\n",
-      "loss: 0.395563  [32000/60000]\n",
-      "loss: 0.328515  [38400/60000]\n",
-      "loss: 0.496704  [44800/60000]\n",
-      "loss: 0.387178  [51200/60000]\n",
-      "loss: 0.415278  [57600/60000]\n",
+      "loss: 0.134051  [    0/60000]\n",
+      "loss: 0.168127  [ 6400/60000]\n",
+      "loss: 0.202683  [12800/60000]\n",
+      "loss: 0.226282  [19200/60000]\n",
+      "loss: 0.292221  [25600/60000]\n",
+      "loss: 0.213263  [32000/60000]\n",
+      "loss: 0.142314  [38400/60000]\n",
+      "loss: 0.218527  [44800/60000]\n",
+      "loss: 0.234342  [51200/60000]\n",
+      "loss: 0.199279  [57600/60000]\n",
       "Test Error: \n",
-      " Accuracy: 85.1%, Avg loss: 0.399279 \n",
+      " Accuracy: 88.3%, Avg loss: 0.365674 \n",
       "\n",
       "Epoch 3\n",
       "-------------------------------\n",
-      "loss: 0.241160  [    0/60000]\n",
-      "loss: 0.310335  [ 6400/60000]\n",
-      "loss: 0.242138  [12800/60000]\n",
-      "loss: 0.339899  [19200/60000]\n",
-      "loss: 0.369744  [25600/60000]\n",
-      "loss: 0.345545  [32000/60000]\n",
-      "loss: 0.269709  [38400/60000]\n",
-      "loss: 0.438893  [44800/60000]\n",
-      "loss: 0.321591  [51200/60000]\n",
-      "loss: 0.402128  [57600/60000]\n",
+      "loss: 0.161832  [    0/60000]\n",
+      "loss: 0.182679  [ 6400/60000]\n",
+      "loss: 0.194521  [12800/60000]\n",
+      "loss: 0.142119  [19200/60000]\n",
+      "loss: 0.297156  [25600/60000]\n",
+      "loss: 0.190447  [32000/60000]\n",
+      "loss: 0.141630  [38400/60000]\n",
+      "loss: 0.202461  [44800/60000]\n",
+      "loss: 0.125364  [51200/60000]\n",
+      "loss: 0.204238  [57600/60000]\n",
       "Test Error: \n",
-      " Accuracy: 86.4%, Avg loss: 0.373959 \n",
+      " Accuracy: 88.0%, Avg loss: 0.391475 \n",
       "\n",
       "Epoch 4\n",
       "-------------------------------\n",
-      "loss: 0.215813  [    0/60000]\n",
-      "loss: 0.299702  [ 6400/60000]\n",
-      "loss: 0.224476  [12800/60000]\n",
-      "loss: 0.302599  [19200/60000]\n",
-      "loss: 0.307987  [25600/60000]\n",
-      "loss: 0.337708  [32000/60000]\n",
-      "loss: 0.246550  [38400/60000]\n",
-      "loss: 0.389436  [44800/60000]\n",
-      "loss: 0.301236  [51200/60000]\n",
-      "loss: 0.348134  [57600/60000]\n",
+      "loss: 0.133973  [    0/60000]\n",
+      "loss: 0.110767  [ 6400/60000]\n",
+      "loss: 0.201055  [12800/60000]\n",
+      "loss: 0.126326  [19200/60000]\n",
+      "loss: 0.235895  [25600/60000]\n",
+      "loss: 0.186606  [32000/60000]\n",
+      "loss: 0.124809  [38400/60000]\n",
+      "loss: 0.182533  [44800/60000]\n",
+      "loss: 0.158394  [51200/60000]\n",
+      "loss: 0.142485  [57600/60000]\n",
       "Test Error: \n",
-      " Accuracy: 87.1%, Avg loss: 0.350424 \n",
+      " Accuracy: 87.7%, Avg loss: 0.412615 \n",
       "\n",
       "Epoch 5\n",
       "-------------------------------\n",
-      "loss: 0.193091  [    0/60000]\n",
-      "loss: 0.287506  [ 6400/60000]\n",
-      "loss: 0.209560  [12800/60000]\n",
-      "loss: 0.265362  [19200/60000]\n",
-      "loss: 0.345912  [25600/60000]\n",
-      "loss: 0.312889  [32000/60000]\n",
-      "loss: 0.237957  [38400/60000]\n",
-      "loss: 0.331080  [44800/60000]\n",
-      "loss: 0.288810  [51200/60000]\n",
-      "loss: 0.324199  [57600/60000]\n",
+      "loss: 0.121209  [    0/60000]\n",
+      "loss: 0.140251  [ 6400/60000]\n",
+      "loss: 0.143365  [12800/60000]\n",
+      "loss: 0.167834  [19200/60000]\n",
+      "loss: 0.164055  [25600/60000]\n",
+      "loss: 0.162864  [32000/60000]\n",
+      "loss: 0.092290  [38400/60000]\n",
+      "loss: 0.228874  [44800/60000]\n",
+      "loss: 0.284591  [51200/60000]\n",
+      "loss: 0.177794  [57600/60000]\n",
       "Test Error: \n",
-      " Accuracy: 87.4%, Avg loss: 0.347970 \n",
+      " Accuracy: 88.0%, Avg loss: 0.422567 \n",
       "\n",
       "Epoch 6\n",
       "-------------------------------\n",
-      "loss: 0.183511  [    0/60000]\n",
-      "loss: 0.233997  [ 6400/60000]\n",
-      "loss: 0.208666  [12800/60000]\n",
-      "loss: 0.226931  [19200/60000]\n",
-      "loss: 0.306822  [25600/60000]\n",
-      "loss: 0.282568  [32000/60000]\n",
-      "loss: 0.234058  [38400/60000]\n",
-      "loss: 0.314469  [44800/60000]\n",
-      "loss: 0.273840  [51200/60000]\n",
-      "loss: 0.300020  [57600/60000]\n",
+      "loss: 0.111077  [    0/60000]\n",
+      "loss: 0.126993  [ 6400/60000]\n",
+      "loss: 0.182154  [12800/60000]\n",
+      "loss: 0.121934  [19200/60000]\n",
+      "loss: 0.160889  [25600/60000]\n",
+      "loss: 0.141138  [32000/60000]\n",
+      "loss: 0.094886  [38400/60000]\n",
+      "loss: 0.185556  [44800/60000]\n",
+      "loss: 0.147507  [51200/60000]\n",
+      "loss: 0.192016  [57600/60000]\n",
       "Test Error: \n",
-      " Accuracy: 88.1%, Avg loss: 0.338178 \n",
+      " Accuracy: 87.7%, Avg loss: 0.410910 \n",
       "\n",
       "Epoch 7\n",
       "-------------------------------\n",
-      "loss: 0.174191  [    0/60000]\n",
-      "loss: 0.213734  [ 6400/60000]\n",
-      "loss: 0.201468  [12800/60000]\n",
-      "loss: 0.264985  [19200/60000]\n",
-      "loss: 0.267527  [25600/60000]\n",
-      "loss: 0.310967  [32000/60000]\n",
-      "loss: 0.205312  [38400/60000]\n",
-      "loss: 0.294086  [44800/60000]\n",
-      "loss: 0.250370  [51200/60000]\n",
-      "loss: 0.305921  [57600/60000]\n",
+      "loss: 0.138600  [    0/60000]\n",
+      "loss: 0.125053  [ 6400/60000]\n",
+      "loss: 0.196059  [12800/60000]\n",
+      "loss: 0.149219  [19200/60000]\n",
+      "loss: 0.155828  [25600/60000]\n",
+      "loss: 0.222469  [32000/60000]\n",
+      "loss: 0.111168  [38400/60000]\n",
+      "loss: 0.166075  [44800/60000]\n",
+      "loss: 0.181846  [51200/60000]\n",
+      "loss: 0.151495  [57600/60000]\n",
       "Test Error: \n",
-      " Accuracy: 88.3%, Avg loss: 0.335146 \n",
+      " Accuracy: 88.5%, Avg loss: 0.406419 \n",
       "\n",
       "Epoch 8\n",
       "-------------------------------\n",
-      "loss: 0.171798  [    0/60000]\n",
-      "loss: 0.169339  [ 6400/60000]\n",
-      "loss: 0.188389  [12800/60000]\n",
-      "loss: 0.256257  [19200/60000]\n",
-      "loss: 0.254813  [25600/60000]\n",
-      "loss: 0.258554  [32000/60000]\n",
-      "loss: 0.181038  [38400/60000]\n",
-      "loss: 0.258381  [44800/60000]\n",
-      "loss: 0.234915  [51200/60000]\n",
-      "loss: 0.258181  [57600/60000]\n",
+      "loss: 0.127437  [    0/60000]\n",
+      "loss: 0.119420  [ 6400/60000]\n",
+      "loss: 0.203156  [12800/60000]\n",
+      "loss: 0.150686  [19200/60000]\n",
+      "loss: 0.186047  [25600/60000]\n",
+      "loss: 0.228093  [32000/60000]\n",
+      "loss: 0.155769  [38400/60000]\n",
+      "loss: 0.211060  [44800/60000]\n",
+      "loss: 0.092213  [51200/60000]\n",
+      "loss: 0.144634  [57600/60000]\n",
       "Test Error: \n",
-      " Accuracy: 88.5%, Avg loss: 0.337500 \n",
+      " Accuracy: 88.2%, Avg loss: 0.428464 \n",
       "\n",
       "Epoch 9\n",
       "-------------------------------\n",
-      "loss: 0.137195  [    0/60000]\n",
-      "loss: 0.150252  [ 6400/60000]\n",
-      "loss: 0.225732  [12800/60000]\n",
-      "loss: 0.206544  [19200/60000]\n",
-      "loss: 0.349607  [25600/60000]\n",
-      "loss: 0.270356  [32000/60000]\n",
-      "loss: 0.187006  [38400/60000]\n",
-      "loss: 0.308742  [44800/60000]\n",
-      "loss: 0.266248  [51200/60000]\n",
-      "loss: 0.237281  [57600/60000]\n",
+      "loss: 0.086396  [    0/60000]\n",
+      "loss: 0.122276  [ 6400/60000]\n",
+      "loss: 0.185129  [12800/60000]\n",
+      "loss: 0.150585  [19200/60000]\n",
+      "loss: 0.106372  [25600/60000]\n",
+      "loss: 0.154635  [32000/60000]\n",
+      "loss: 0.097686  [38400/60000]\n",
+      "loss: 0.165566  [44800/60000]\n",
+      "loss: 0.114580  [51200/60000]\n",
+      "loss: 0.190590  [57600/60000]\n",
       "Test Error: \n",
-      " Accuracy: 87.6%, Avg loss: 0.372228 \n",
+      " Accuracy: 88.6%, Avg loss: 0.421578 \n",
       "\n",
       "Epoch 10\n",
       "-------------------------------\n",
-      "loss: 0.141950  [    0/60000]\n",
-      "loss: 0.146945  [ 6400/60000]\n",
-      "loss: 0.185948  [12800/60000]\n",
-      "loss: 0.207969  [19200/60000]\n",
-      "loss: 0.280237  [25600/60000]\n",
-      "loss: 0.255344  [32000/60000]\n",
-      "loss: 0.166319  [38400/60000]\n",
-      "loss: 0.270851  [44800/60000]\n",
-      "loss: 0.222974  [51200/60000]\n",
-      "loss: 0.230645  [57600/60000]\n",
+      "loss: 0.096179  [    0/60000]\n",
+      "loss: 0.251210  [ 6400/60000]\n",
+      "loss: 0.129696  [12800/60000]\n",
+      "loss: 0.129367  [19200/60000]\n",
+      "loss: 0.099596  [25600/60000]\n",
+      "loss: 0.164582  [32000/60000]\n",
+      "loss: 0.100451  [38400/60000]\n",
+      "loss: 0.216934  [44800/60000]\n",
+      "loss: 0.098317  [51200/60000]\n",
+      "loss: 0.123806  [57600/60000]\n",
       "Test Error: \n",
-      " Accuracy: 88.0%, Avg loss: 0.362040 \n",
+      " Accuracy: 87.9%, Avg loss: 0.476086 \n",
       "\n",
       "Done!\n"
      ]
@@ -476,15 +478,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "8a3eb5a2",
+   "execution_count": 27,
+   "id": "de87901e",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Predicted: \"Ankle boot\", Actual: \"Ankle boot\"\n"
+      "Predicted: \"Ankle boot\", Actual: \"Ankle boot\"\n",
+      "Predicted: \"Pullover\", Actual: \"Pullover\"\n",
+      "Predicted: \"Trouser\", Actual: \"Trouser\"\n",
+      "Predicted: \"Trouser\", Actual: \"Trouser\"\n",
+      "Predicted: \"Shirt\", Actual: \"Shirt\"\n"
      ]
     }
    ],
@@ -504,17 +510,18 @@
     "]\n",
     "\n",
     "model.eval()\n",
-    "x, y = test_data[0][0], test_data[0][1]\n",
-    "with torch.no_grad():\n",
-    "    pred = model(x)\n",
-    "    predicted, actual = classes[pred[0].argmax(0)], classes[y]\n",
-    "    print(f'Predicted: \"{predicted}\", Actual: \"{actual}\"')"
+    "for i in range(5):\n",
+    "    x, y = test_data[i][0], test_data[i][1]\n",
+    "    with torch.no_grad():\n",
+    "        pred = model(x)\n",
+    "        predicted, actual = classes[pred[0].argmax(0)], classes[y]\n",
+    "        print(f'Predicted: \"{predicted}\", Actual: \"{actual}\"')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73886ab9",
+   "id": "7c8dc834",
    "metadata": {},
    "outputs": [],
    "source": []
