--- a/pytorch_play/basics/tensors.ipynb
+++ b/pytorch_play/basics/tensors.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "de25c545",
+   "id": "a29d956c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "1142ac35",
+   "id": "4c60dbbe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "5bc6ef74",
+   "id": "b81b3719",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "e9e4ba59",
+   "id": "11599b2a",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "0fb3c7fe",
+   "id": "9de00252",
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "f6eb4125",
+   "id": "c8e215a5",
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "9a59e6ed",
+   "id": "8caa7da0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "cf6eafce",
+   "id": "f294e549",
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "acb64124",
+   "id": "58d839fa",
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "da2e6aa4",
+   "id": "52d94a39",
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "eb5890a3",
+   "id": "6d73e70f",
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +254,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "7e6f70e2",
+   "id": "4738f156",
    "metadata": {},
    "outputs": [
     {
@@ -282,8 +282,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "2948e03b",
+   "execution_count": 16,
+   "id": "5a4d7543",
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +291,9 @@
      "output_type": "stream",
      "text": [
       "t: tensor([1., 1., 1., 1., 1.])\n",
-      "n: [1. 1. 1. 1. 1.]\n"
+      "n: [1. 1. 1. 1. 1.]\n",
+      "t: tensor([2., 2., 2., 2., 2.])\n",
+      "n: [2. 2. 2. 2. 2.]\n"
      ]
     }
    ],
@@ -300,13 +302,44 @@
     "t = torch.ones(5)\n",
     "print(f\"t: {t}\")\n",
     "n = t.numpy()\n",
+    "print(f\"n: {n}\")\n",
+    "\n",
+    "# changing the tensor affects the np array \n",
+    "t.add_(1)\n",
+    "print(f\"t: {t}\")\n",
+    "print(f\"n: {n}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "ad1725fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "t: tensor([2., 2., 2., 2., 2.], dtype=torch.float64)\n",
+      "n: [2. 2. 2. 2. 2.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# np to tensor \n",
+    "n = np.ones(5)\n",
+    "t = torch.from_numpy(n)\n",
+    "\n",
+    "# changes in np affect the tensor \n",
+    "np.add(n, 1, out=n)\n",
+    "print(f\"t: {t}\")\n",
     "print(f\"n: {n}\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7a19b96",
+   "id": "554a8bb5",
    "metadata": {},
    "outputs": [],
    "source": []
