Switched to ADAM

--- a/pytorch_play/basics/optimization.ipynb
+++ b/pytorch_play/basics/optimization.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 44,
    "id": "8bc2e638",
    "metadata": {},
    "outputs": [],
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 45,
    "id": "b177f6af",
    "metadata": {},
    "outputs": [
@@ -96,7 +96,7 @@
        ")"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 46,
    "id": "17ad9512",
    "metadata": {},
    "outputs": [],
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 47,
    "id": "0dd41fe7",
    "metadata": {},
    "outputs": [],
@@ -133,18 +133,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 48,
    "id": "916023a8",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Optimizer \n",
-    "optimizer = torch.optim.SGD(model.parameters(), lr=learning_rate) "
+    "optimizer = torch.optim.Adam(model.parameters(), lr=learning_rate) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 49,
    "id": "217af6dd",
    "metadata": {},
    "outputs": [],
@@ -191,11 +191,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 50,
    "id": "42d220a2",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -203,153 +201,153 @@
      "text": [
       "Epoch 1\n",
       "-------------------------------\n",
-      "loss: 0.830300  [    0/60000]\n",
-      "loss: 0.885985  [ 6400/60000]\n",
-      "loss: 0.619712  [12800/60000]\n",
-      "loss: 0.801165  [19200/60000]\n",
-      "loss: 0.694469  [25600/60000]\n",
-      "loss: 0.663644  [32000/60000]\n",
-      "loss: 0.753399  [38400/60000]\n",
-      "loss: 0.700865  [44800/60000]\n",
-      "loss: 0.722367  [51200/60000]\n",
-      "loss: 0.668257  [57600/60000]\n",
+      "loss: 2.302658  [    0/60000]\n",
+      "loss: 0.585104  [ 6400/60000]\n",
+      "loss: 0.395761  [12800/60000]\n",
+      "loss: 0.496377  [19200/60000]\n",
+      "loss: 0.502460  [25600/60000]\n",
+      "loss: 0.485703  [32000/60000]\n",
+      "loss: 0.356275  [38400/60000]\n",
+      "loss: 0.494033  [44800/60000]\n",
+      "loss: 0.545251  [51200/60000]\n",
+      "loss: 0.627581  [57600/60000]\n",
       "Test Error: \n",
-      " Accuracy: 77.5%, Avg loss: 0.646582 \n",
+      " Accuracy: 81.0%, Avg loss: 0.545007 \n",
       "\n",
       "Epoch 2\n",
       "-------------------------------\n",
-      "loss: 0.575094  [    0/60000]\n",
-      "loss: 0.680057  [ 6400/60000]\n",
-      "loss: 0.452524  [12800/60000]\n",
-      "loss: 0.674809  [19200/60000]\n",
-      "loss: 0.596775  [25600/60000]\n",
-      "loss: 0.576685  [32000/60000]\n",
-      "loss: 0.617936  [38400/60000]\n",
-      "loss: 0.650599  [44800/60000]\n",
-      "loss: 0.681401  [51200/60000]\n",
-      "loss: 0.569000  [57600/60000]\n",
+      "loss: 0.376136  [    0/60000]\n",
+      "loss: 0.375323  [ 6400/60000]\n",
+      "loss: 0.387310  [12800/60000]\n",
+      "loss: 0.453991  [19200/60000]\n",
+      "loss: 0.571597  [25600/60000]\n",
+      "loss: 0.355998  [32000/60000]\n",
+      "loss: 0.322535  [38400/60000]\n",
+      "loss: 0.532842  [44800/60000]\n",
+      "loss: 0.506488  [51200/60000]\n",
+      "loss: 0.492850  [57600/60000]\n",
       "Test Error: \n",
-      " Accuracy: 79.7%, Avg loss: 0.574739 \n",
+      " Accuracy: 83.1%, Avg loss: 0.474853 \n",
       "\n",
       "Epoch 3\n",
       "-------------------------------\n",
-      "loss: 0.467890  [    0/60000]\n",
-      "loss: 0.586234  [ 6400/60000]\n",
-      "loss: 0.386501  [12800/60000]\n",
-      "loss: 0.610342  [19200/60000]\n",
-      "loss: 0.536103  [25600/60000]\n",
-      "loss: 0.534613  [32000/60000]\n",
-      "loss: 0.556145  [38400/60000]\n",
-      "loss: 0.649084  [44800/60000]\n",
-      "loss: 0.668077  [51200/60000]\n",
-      "loss: 0.503345  [57600/60000]\n",
+      "loss: 0.240387  [    0/60000]\n",
+      "loss: 0.429256  [ 6400/60000]\n",
+      "loss: 0.340558  [12800/60000]\n",
+      "loss: 0.477810  [19200/60000]\n",
+      "loss: 0.467582  [25600/60000]\n",
+      "loss: 0.390195  [32000/60000]\n",
+      "loss: 0.343327  [38400/60000]\n",
+      "loss: 0.536016  [44800/60000]\n",
+      "loss: 0.481081  [51200/60000]\n",
+      "loss: 0.531453  [57600/60000]\n",
       "Test Error: \n",
-      " Accuracy: 80.7%, Avg loss: 0.541538 \n",
+      " Accuracy: 83.6%, Avg loss: 0.461957 \n",
       "\n",
       "Epoch 4\n",
       "-------------------------------\n",
-      "loss: 0.407023  [    0/60000]\n",
-      "loss: 0.540398  [ 6400/60000]\n",
-      "loss: 0.350871  [12800/60000]\n",
-      "loss: 0.567402  [19200/60000]\n",
-      "loss: 0.488816  [25600/60000]\n",
-      "loss: 0.500448  [32000/60000]\n",
-      "loss: 0.521926  [38400/60000]\n",
-      "loss: 0.648782  [44800/60000]\n",
-      "loss: 0.650224  [51200/60000]\n",
-      "loss: 0.462960  [57600/60000]\n",
+      "loss: 0.211001  [    0/60000]\n",
+      "loss: 0.373631  [ 6400/60000]\n",
+      "loss: 0.360321  [12800/60000]\n",
+      "loss: 0.430807  [19200/60000]\n",
+      "loss: 0.779040  [25600/60000]\n",
+      "loss: 0.379143  [32000/60000]\n",
+      "loss: 0.319960  [38400/60000]\n",
+      "loss: 0.547218  [44800/60000]\n",
+      "loss: 0.397225  [51200/60000]\n",
+      "loss: 0.436783  [57600/60000]\n",
       "Test Error: \n",
-      " Accuracy: 81.3%, Avg loss: 0.521414 \n",
+      " Accuracy: 83.8%, Avg loss: 0.457722 \n",
       "\n",
       "Epoch 5\n",
       "-------------------------------\n",
-      "loss: 0.365531  [    0/60000]\n",
-      "loss: 0.514231  [ 6400/60000]\n",
-      "loss: 0.326137  [12800/60000]\n",
-      "loss: 0.536302  [19200/60000]\n",
-      "loss: 0.456899  [25600/60000]\n",
-      "loss: 0.475467  [32000/60000]\n",
-      "loss: 0.497254  [38400/60000]\n",
-      "loss: 0.638967  [44800/60000]\n",
-      "loss: 0.629436  [51200/60000]\n",
-      "loss: 0.441391  [57600/60000]\n",
+      "loss: 0.271478  [    0/60000]\n",
+      "loss: 0.331217  [ 6400/60000]\n",
+      "loss: 0.319451  [12800/60000]\n",
+      "loss: 0.378672  [19200/60000]\n",
+      "loss: 0.531044  [25600/60000]\n",
+      "loss: 0.344617  [32000/60000]\n",
+      "loss: 0.266188  [38400/60000]\n",
+      "loss: 0.609019  [44800/60000]\n",
+      "loss: 0.470781  [51200/60000]\n",
+      "loss: 0.383177  [57600/60000]\n",
       "Test Error: \n",
-      " Accuracy: 81.8%, Avg loss: 0.506312 \n",
+      " Accuracy: 82.8%, Avg loss: 0.465295 \n",
       "\n",
       "Epoch 6\n",
       "-------------------------------\n",
-      "loss: 0.333962  [    0/60000]\n",
-      "loss: 0.494526  [ 6400/60000]\n",
-      "loss: 0.307197  [12800/60000]\n",
-      "loss: 0.514608  [19200/60000]\n",
-      "loss: 0.434705  [25600/60000]\n",
-      "loss: 0.457984  [32000/60000]\n",
-      "loss: 0.477197  [38400/60000]\n",
-      "loss: 0.625283  [44800/60000]\n",
-      "loss: 0.609884  [51200/60000]\n",
-      "loss: 0.429318  [57600/60000]\n",
+      "loss: 0.275433  [    0/60000]\n",
+      "loss: 0.275083  [ 6400/60000]\n",
+      "loss: 0.306288  [12800/60000]\n",
+      "loss: 0.342746  [19200/60000]\n",
+      "loss: 0.402032  [25600/60000]\n",
+      "loss: 0.366382  [32000/60000]\n",
+      "loss: 0.295665  [38400/60000]\n",
+      "loss: 0.627512  [44800/60000]\n",
+      "loss: 0.507059  [51200/60000]\n",
+      "loss: 0.434906  [57600/60000]\n",
       "Test Error: \n",
-      " Accuracy: 82.1%, Avg loss: 0.494295 \n",
+      " Accuracy: 84.6%, Avg loss: 0.432107 \n",
       "\n",
       "Epoch 7\n",
       "-------------------------------\n",
-      "loss: 0.310997  [    0/60000]\n",
-      "loss: 0.478144  [ 6400/60000]\n",
-      "loss: 0.292888  [12800/60000]\n",
-      "loss: 0.498652  [19200/60000]\n",
-      "loss: 0.417208  [25600/60000]\n",
-      "loss: 0.445696  [32000/60000]\n",
-      "loss: 0.459947  [38400/60000]\n",
-      "loss: 0.610751  [44800/60000]\n",
-      "loss: 0.593328  [51200/60000]\n",
-      "loss: 0.422694  [57600/60000]\n",
+      "loss: 0.292461  [    0/60000]\n",
+      "loss: 0.332326  [ 6400/60000]\n",
+      "loss: 0.293086  [12800/60000]\n",
+      "loss: 0.375273  [19200/60000]\n",
+      "loss: 0.297725  [25600/60000]\n",
+      "loss: 0.319789  [32000/60000]\n",
+      "loss: 0.295274  [38400/60000]\n",
+      "loss: 0.624414  [44800/60000]\n",
+      "loss: 0.579232  [51200/60000]\n",
+      "loss: 0.427456  [57600/60000]\n",
       "Test Error: \n",
-      " Accuracy: 82.6%, Avg loss: 0.484149 \n",
+      " Accuracy: 83.7%, Avg loss: 0.467154 \n",
       "\n",
       "Epoch 8\n",
       "-------------------------------\n",
-      "loss: 0.294767  [    0/60000]\n",
-      "loss: 0.463892  [ 6400/60000]\n",
-      "loss: 0.280752  [12800/60000]\n",
-      "loss: 0.486068  [19200/60000]\n",
-      "loss: 0.399327  [25600/60000]\n",
-      "loss: 0.435311  [32000/60000]\n",
-      "loss: 0.444508  [38400/60000]\n",
-      "loss: 0.596748  [44800/60000]\n",
-      "loss: 0.577694  [51200/60000]\n",
-      "loss: 0.417658  [57600/60000]\n",
+      "loss: 0.284582  [    0/60000]\n",
+      "loss: 0.421388  [ 6400/60000]\n",
+      "loss: 0.285872  [12800/60000]\n",
+      "loss: 0.310499  [19200/60000]\n",
+      "loss: 0.547706  [25600/60000]\n",
+      "loss: 0.338433  [32000/60000]\n",
+      "loss: 0.301119  [38400/60000]\n",
+      "loss: 0.661242  [44800/60000]\n",
+      "loss: 0.418964  [51200/60000]\n",
+      "loss: 0.439315  [57600/60000]\n",
       "Test Error: \n",
-      " Accuracy: 82.9%, Avg loss: 0.474737 \n",
+      " Accuracy: 84.7%, Avg loss: 0.455431 \n",
       "\n",
       "Epoch 9\n",
       "-------------------------------\n",
-      "loss: 0.282726  [    0/60000]\n",
-      "loss: 0.450054  [ 6400/60000]\n",
-      "loss: 0.271733  [12800/60000]\n",
-      "loss: 0.474227  [19200/60000]\n",
-      "loss: 0.382999  [25600/60000]\n",
-      "loss: 0.425435  [32000/60000]\n",
-      "loss: 0.430735  [38400/60000]\n",
-      "loss: 0.585961  [44800/60000]\n",
-      "loss: 0.564374  [51200/60000]\n",
-      "loss: 0.414786  [57600/60000]\n",
+      "loss: 0.195494  [    0/60000]\n",
+      "loss: 0.259263  [ 6400/60000]\n",
+      "loss: 0.253142  [12800/60000]\n",
+      "loss: 0.294794  [19200/60000]\n",
+      "loss: 0.408082  [25600/60000]\n",
+      "loss: 0.320183  [32000/60000]\n",
+      "loss: 0.307634  [38400/60000]\n",
+      "loss: 0.596130  [44800/60000]\n",
+      "loss: 0.417795  [51200/60000]\n",
+      "loss: 0.408916  [57600/60000]\n",
       "Test Error: \n",
-      " Accuracy: 83.2%, Avg loss: 0.466211 \n",
+      " Accuracy: 84.5%, Avg loss: 0.484484 \n",
       "\n",
       "Epoch 10\n",
       "-------------------------------\n",
-      "loss: 0.273685  [    0/60000]\n",
-      "loss: 0.437008  [ 6400/60000]\n",
-      "loss: 0.264276  [12800/60000]\n",
-      "loss: 0.464139  [19200/60000]\n",
-      "loss: 0.368816  [25600/60000]\n",
-      "loss: 0.416444  [32000/60000]\n",
-      "loss: 0.417814  [38400/60000]\n",
-      "loss: 0.574477  [44800/60000]\n",
-      "loss: 0.552615  [51200/60000]\n",
-      "loss: 0.411872  [57600/60000]\n",
+      "loss: 0.249985  [    0/60000]\n",
+      "loss: 0.386884  [ 6400/60000]\n",
+      "loss: 0.286127  [12800/60000]\n",
+      "loss: 0.264182  [19200/60000]\n",
+      "loss: 0.468700  [25600/60000]\n",
+      "loss: 0.314982  [32000/60000]\n",
+      "loss: 0.298116  [38400/60000]\n",
+      "loss: 0.600296  [44800/60000]\n",
+      "loss: 0.467857  [51200/60000]\n",
+      "loss: 0.357765  [57600/60000]\n",
       "Test Error: \n",
-      " Accuracy: 83.5%, Avg loss: 0.457626 \n",
+      " Accuracy: 85.2%, Avg loss: 0.468597 \n",
       "\n",
       "Done!\n"
      ]
